@@ -1,4 +1,14 @@
-### Upadte the version of COTS (HEAD -> main)
+### Add Production envrionement. In production envrionment, use gdalsrsinfo. In dev, use the same command but through a call to a docker (HEAD -> main)
+>Wed, 12 Oct 2022 03:21:18 +0200
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Upadte the version of COTS
 >Wed, 12 Oct 2022 03:06:25 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
